test/sema/generic-parameter-shadows-type.delta
// RUN: %check_errors %not %delta -typecheck %s

struct Foo: Copyable { }

// CHECK: [[@LINE+1]]:10: error: redefinition of 'Foo'
void bar<Foo>() { }
